--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "description": "Table full responsive with any devices",
   "main": "responsive-table.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#2.2.3"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
