Upgrade Polymer 2 > Polymer 3

--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
-    "name": "responsive-table",
-    "version": "3.5.3",
-    "description": "Table full responsive in any devices",
-    "main": "index.html",
-    "directories": {
-      "test": "test"
-    },
-    "scripts": {
-      "test": "./node_modules/.bin/wct",
-      "coverage": "open coverage/lcov-report/index.html"
-    },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/igoodbad/responsive-table"
-    },
-    "keywords": [
-      "polymer2",
-      "element",
-       "table",
-       "responsive"
-    ],
-    "author": "@igoodbad",
-    "license": "MIT",
-    "bugs": {
-      "url": "https://github.com/igoodbad/responsive-table/issues"
-    },
-    "homepage": "https://github.com/igoodbad/responsive-table#readme",
-    "devDependencies": {
-      "web-component-tester": "git+https://github.com/t2ym/web-component-tester.git#wct6-plugin",
-      "web-component-tester-istanbul": "git+https://github.com/t2ym/web-component-tester-istanbul.git#0.10.1-wct6.8"
-    }
+  "name": "responsive-table",
+  "version": "3.5.3",
+  "description": "Table full responsive in any devices",
+  "main": "responsive-table.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "./node_modules/.bin/wct",
+    "coverage": "open coverage/lcov-report/index.html"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/igoodbad/responsive-table"
+  },
+  "keywords": [
+    "polymer3",
+    "element",
+    "table",
+    "responsive",
+    "sortable",
+    "edit"
+  ],
+  "author": "@igoodbad",
+  "license": "Apache License 2.0 (Apache-2.0)",
+  "bugs": {
+    "url": "https://github.com/igoodbad/responsive-table/issues"
+  },
+  "homepage": "https://github.com/igoodbad/responsive-table#readme",
+  "dependencies": {
+    "@polymer/paper-input": "^3.0.1",
+    "@polymer/polymer": "^3.0.0"
+  },
+  "devDependencies": {
+    "@polymer/iron-demo-helpers": "^3.0.0-pre.19",
+    "@polymer/test-fixture": "^4.0.2",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "wct-mocha": "^1.0.0"
   }
+}
