--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/igoodbad/responsive-table"
+    "url": "https://github.com/igoodbad/responsive-table.git"
   },
   "keywords": [
     "polymer3",
