--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "3.1.1",
   "description": "Table full responsive in any devices",
   "main": "responsive-table.js",
+  "private": false,
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "./node_modules/.bin/wct",
+    "test": "wct",
     "coverage": "open coverage/lcov-report/index.html"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/igoodbad/responsive-table.git"
+    "url": "git+https://github.com/igoodbad/responsive-table.git"
   },
   "keywords": [
     "polymer3",
@@ -23,7 +24,7 @@
     "edit"
   ],
   "author": "igoodbad",
-  "license": "Apache License 2.0 (Apache-2.0)",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/igoodbad/responsive-table/issues"
   },
